fixing issue with whitespace around script / dataset / folder names in delete modal

--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -331,6 +331,13 @@ a.script:hover {
   margin-left: 20px;
 }
 
+.modal .foldername,
+.modal .scriptname,
+.modal .datasetname {
+  width: initial;
+  margin: 0;
+}
+
 .dataset .status,
 .script .status {
   margin-left: 0.33em;
